new added apis admin
